--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "argv": "0.0.2",
+    "glob": "^7.1.2",
     "lodash": "^4.17.4",
-    "node-xlsx": "^0.11.2"
+    "mkdirp": "^0.5.1",
+    "node-xlsx": "^0.11.2",
+    "rimraf": "^2.6.2"
   }
 }
